span visibility fixed, switched the order of information appearing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -356,7 +356,7 @@ svg {
   width: 2rem;
 }
 
-span {
+.header-titles {
   display: none;
 }
 
@@ -366,7 +366,7 @@ ul li {
 }
 
 @media only screen and (min-width: 500px) {
-  span {
+  .header-titles {
     display: inline-block;
   }
 
