--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -45,7 +45,7 @@
         width: 2rem;
     }
 
-    span {
+    .header-titles {
         display:none;
     }
 
@@ -58,7 +58,7 @@
 @media only screen and (min-width: 500px) {
 
 
-   span {
+   .header-titles {
     display:inline-block;
     }
 
