--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -341,7 +341,7 @@ svg {
   width: 2rem;
 }
 
-span {
+.header-titles {
   display: none;
 }
 
@@ -351,7 +351,7 @@ ul li {
 }
 
 @media only screen and (min-width: 500px) {
-  span {
+  .header-titles {
     display: inline-block;
   }
   li {
